--- a/index.html
+++ b/index.html
@@ -14,15 +14,18 @@
     crossorigin="anonymous"></script>
 </head>
 <body>
+    <!-- Menu de navegação -->
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-3">
+            <div class="container">
                 <a  class="navbar-brand" href="#">FluentTalk</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" 
+                aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbar-rigth">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a href="#" class="nav-link active" aria-current="page">Ínicio</a>
                         </li>
@@ -58,7 +61,33 @@
         </nav>
     </header>
     <main>
+        <!-- Menu principal -->
+        <section class="bg-dark text-light p-5 text-center text-sm-start" id="inicio">
+            <div class="container py-5">
+                <div class="d-sm-flex align-items-center justify-content-between py-5">
+                    <div>
+                        <h1>Seja bem vindo ao FluentTalk</h1>
+                        <h3 class="my-4">Aulas de conversação em inglês</h3>
+                        <p class="lead my-4">
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                            Iste quos quod suscipit hic vero quo dolorem harum deserunt optio molestiae 
+                            laborum, ut voluptatem cupiditate dolor maxime adipisci molestias, velit tempora?
+                        </p>
+                        <button class="btn btn-primary btn-lg">Entre em contato</button>
+                    </div>
+                    <a href="#">
+                        <img src="./img/webinar-img01.png" class="img-fluid" width="100%" alt="Webinar que representa o curso">
+                    </a>
+                </div>
+            </div>
+        </section>
 
+        <!-- seção de serviços -->
+        <section class="bg-primary text-light p-5">
+            <div class="container py-5">
+
+            </div> 
+        </section>
     </main>
     <footer>
 
