--- a/index.html
+++ b/index.html
@@ -12,17 +12,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" 
     rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" 
     crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" 
-    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" 
-    crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" 
     rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" 
     crossorigin="anonymous">
+    <!-- Option 1: Include in HTML -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 </head>
 <body>
     <!-- Menu de navegação -->
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-3">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-danger py-3">
             <div class="container">
                 <a  class="navbar-brand" href="#">FluentTalk</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
@@ -30,36 +29,25 @@
                 aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbar-rigth">
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a href="#" class="nav-link active" aria-current="page">Ínicio</a>
+                            <a href="#inicio" class="nav-link active" aria-current="page">Ínicio</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link services" aria-current="page">Serviços</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                dropdown
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
-                            </ul>
+                            <a href="#servicos" class="nav-link services" aria-current="page">Serviços</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link about" aria-current="page">Sobre</a>
+                            <a href="#sobre" class="nav-link about" aria-current="page">Sobre</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link questions" aria-current="page">Perguntas</a>
+                            <a href="#perguntas" class="nav-link questions" aria-current="page">Perguntas</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link instrutionse" aria-current="page">Instrutores</a>
+                            <a href="#instrutores" class="nav-link instrutionse" aria-current="page">Instrutores</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link contactse" aria-current="page">Contatos</a>
+                            <a href="#contatos" class="nav-link contactse" aria-current="page">Contatos</a>
                         </li>
                     </ul>
                 </div>
@@ -68,18 +56,20 @@
     </header>
     <main>
         <!-- Menu principal -->
-        <section class="bg-dark text-light p-5 text-center text-sm-start" id="inicio">
+        <section class="primeirasecao p-5 text-center text-sm-start" id="inicio">
             <div class="container py-5">
-                <div class="d-sm-flex align-items-center justify-content-between py-5">
+                <div class="d-sm-flex align-items-center justify-content-between py-0">
                     <div>
-                        <h1>Seja bem vindo ao FluentTalk</h1>
+                        <h1>Seja bem vindo ao <span class="text-danger">FluentTalk</span></h1>
                         <h3 class="my-4">Aulas de conversação em inglês</h3>
                         <p class="lead my-4">
                             Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                             Iste quos quod suscipit hic vero quo dolorem harum deserunt optio molestiae 
                             laborum, ut voluptatem cupiditate dolor maxime adipisci molestias, velit tempora?
                         </p>
-                        <button class="btn btn-primary btn-lg">Entre em contato</button>
+                    <button class="btn btn-primary bg-danger" data-bs-target="#exampleModalToggle" data-bs-toggle="modal">
+                        Saiba mais
+                    </button>
                     </div>
                     <a href="#">
                         <img src="./img/webinar-img01.png" class="img-fluid" width="100%" alt="Webinar que representa o curso">
@@ -101,7 +91,7 @@
             </div> 
         </section>
         <!-- Seção de serviços -->
-        <section class="p-5" id="services">
+        <section class="p-5" id="servicos">
             <div class="container py-5">
                 <div class="row text-center g-4">
                     <div class="col-md">
@@ -168,7 +158,7 @@
                                     non perferendis minima reprehenderit ipsa quasi impedit reiciendis
                                      odit quia? Dolorum iure et totam repellat eaque?
                                 </p>
-                                <a href="#" class="btn btn-primary"> Leia mais</a>
+                                <a href="#" class="btn btn-primary"><i class="bi bi-chevron-right"></i> Leia mais</a>
                             </div>
                         </div>
                     </div>
@@ -193,7 +183,7 @@
                             Autem pariatur molestias iusto deleniti! Cupiditate placeat atque optio 
                             quasi, eos vel, repudiandae ullam perferendis ab facilis sequi, quisquam 
                             soluta.</p>
-                        <a href="#" class="btn btn-primary mt-3">Leia mais</a>
+                        <a href="#" class="btn btn-primary mt-3"> <i class="bi bi-chevron-right"></i>Leia mais</a>
                     </div>
                 </div>
             </div>
@@ -269,7 +259,7 @@
         </section>
 
         <!-- Instrutores -->
-        <section class="p-5 bg-primary">
+        <section class="p-5 bg-primary" id="instrutores">
             <div class="container py-5">
                 <h2 class="text-center text-white">Nossos instrutores</h2>
 
@@ -384,7 +374,7 @@
 
                 <div class="col-lg-2 col-md-2 mx-auto">
                     <h5 class="text-uppercase font-weight-bold mb-4">Páginas</h5>
-                        <ul class="list-unstyled">
+                        <ul class="list-styled">
                             <li class="mb-1"><a href="#">Início</a></li>
                             <li class="mb-1"><a href="#">Sobre</a></li>
                             <li class="mb-1"><a href="#">Serviços</a></li>
@@ -392,10 +382,61 @@
                             <li class="mb-1"><a href="#">Web Design</a></li>
                         </ul>
                 </div>
+                <div class="col-lg-3 col-xs-12 location">
+                    <h5 class="text-uppercase font-weight-bold mb-4">Location</h5>
+                    <p class="d-flex"><i class="bi bi-geo-alt" ></i>20, Lorem Ipsum Dolar, consectetur adipisci</p>
+                    <p class="d-flex"><i class="bi bi-phone"></i>(+99)99999-9999</p>
+                    <p class="d-flex"><i class="bi bi-envelope"></i>info@example.com</p>
+                </div>
             </div>
         </div>
-
-
     </footer>
+    <footer class="p-3 bg-dark text-white text-center ">
+        <div class="container">
+            <p class="mb-0">
+                Copyright &copy; 2023 FluentTalnk
+            </p>
+            <a href="#" class="position-relative  bottom-0 end-0 p-5"><i class="bi bi-arrow-up-circle h1"></i></a>
+        </div>
+    </footer>
+
+    <!-- Modais -->
+            <div class="modal fade" id="exampleModalToggle" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
+                <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalToggleLabel">Modal 1</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                    Show a second modal and hide this one with the button below.
+                    </div>
+                    <div class="modal-footer">
+                    <button class="btn btn-primary" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">Open second modal</button>
+                    </div>
+                </div>
+                </div>
+            </div>
+            <div class="modal fade" id="exampleModalToggle2" aria-hidden="true" aria-labelledby="exampleModalToggleLabel2" tabindex="-1">
+                <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalToggleLabel2">Modal 2</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                    Hide this modal and show the first with the button below.
+                    </div>
+                    <div class="modal-footer">
+                    <button class="btn btn-primary" data-bs-target="#exampleModalToggle" data-bs-toggle="modal">Back to first</button>
+                    </div>
+                </div>
+                </div>
+            </div>
+            <button class="btn btn-primary" data-bs-target="#exampleModalToggle" data-bs-toggle="modal">Open first modal</button>
+
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" 
+      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" 
+      crossorigin="anonymous"></script>
 </body>
 </html>
