--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
         </section>
 
         <!-- seção de procura -->
-        <section class="bg-primary text-light p-5">
+        <section class="secaoprocura text-dark p-5">
             <div class="container py-5">
                 <div class="d-md-flex justify-content-between align-items-center">
-                    <h3 class="mb-3 mb-md-0"> Sign up for newsletter</h3>
+                    <h3 class="mb-3 mb-md-0"> Inscreva-se para obter mais informações</h3>
                     <div class="input-group news-input">
                         <input type="text" class="form-control" placeholder="Enter Email" name="">
-                        <button class="btn btn-dark btn-lg">Discover</button>
+                        <button class="btn btn-danger btn-lg">Enviar</button>
                     </div>
                 </div>
             </div> 
@@ -95,70 +95,70 @@
             <div class="container py-5">
                 <div class="row text-center g-4">
                     <div class="col-md">
-                        <div class="card bg-dark text-light p-5">
+                        <div class="card bg-transparent text-secondary p-5 rounded-3 shadow-sm p-5">
                             <div class="card-bordy text-center">
                                 <div class="h1 mb-3">
-                                    <i class="bi bi-laptop"></i>
+                                    <i class="bi bi-clock text-danger"></i>
                                 </div>
-                                <h3 class="card-title mb-3">Web Design</h3>
+                                <h3 class="card-title text-danger mb-3">Prática</h3>
                                 <p class="card-text">
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                                     Distinctio, explicabo iure commodi veritatis eveniet, 
                                     non perferendis minima reprehenderit ipsa quasi impedit reiciendis
                                      odit quia? Dolorum iure et totam repellat eaque?
                                 </p>
-                                <a href="#" class="btn btn-primary"> Leia mais</a>
+                                <a href="#" class="btn btn-danger"> Leia mais</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-md">
-                        <div class="card bg-dark text-light p-5">
+                        <div class="card bg-transparent text-secondary p-5 rounded-3 shadow-sm p-5">
                             <div class="card-bordy text-center">
                                 <div class="h1 mb-3">
-                                    <i class="bi bi-laptop"></i>
+                                    <i class="bi bi-book text-danger"></i>
                                 </div>
-                                <h3 class="card-title mb-3">Web Design</h3>
+                                <h3 class="card-title text-danger mb-3">Vocabulário</h3>
                                 <p class="card-text">
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                                     Distinctio, explicabo iure commodi veritatis eveniet, 
                                     non perferendis minima reprehenderit ipsa quasi impedit reiciendis
                                      odit quia? Dolorum iure et totam repellat eaque?
                                 </p>
-                                <a href="#" class="btn btn-primary"> Leia mais</a>
+                                <a href="#" class="btn btn-danger"> Leia mais</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-md">
-                        <div class="card bg-dark text-light p-5">
+                        <div class="card bg-transparent text-secondary p-5 rounded-3 shadow-sm p-5">
                             <div class="card-bordy text-center">
                                 <div class="h1 mb-3">
-                                    <i class="bi bi-laptop"></i>
+                                    <i class="bi bi-book text-danger"></i>
                                 </div>
-                                <h3 class="card-title mb-3">Web Design</h3>
+                                <h3 class="card-title text-danger mb-3">Auditiva</h3>
                                 <p class="card-text">
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                                     Distinctio, explicabo iure commodi veritatis eveniet, 
                                     non perferendis minima reprehenderit ipsa quasi impedit reiciendis
                                      odit quia? Dolorum iure et totam repellat eaque?
                                 </p>
-                                <a href="#" class="btn btn-primary"> Leia mais</a>
+                                <a href="#" class="btn btn-danger">Leia mais</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-md">
-                        <div class="card bg-dark text-light p-5">
+                        <div class="card bg-transparent text-secondary p-5 rounded-3 shadow-sm p-5">
                             <div class="card-bordy text-center">
                                 <div class="h1 mb-3">
-                                    <i class="bi bi-laptop"></i>
+                                    <i class="bi bi-person-circle text-danger"></i>
                                 </div>
-                                <h3 class="card-title mb-3">Web Design</h3>
+                                <h3 class="card-title text-danger mb-3">Fluência</h3>
                                 <p class="card-text">
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                                     Distinctio, explicabo iure commodi veritatis eveniet, 
                                     non perferendis minima reprehenderit ipsa quasi impedit reiciendis
                                      odit quia? Dolorum iure et totam repellat eaque?
                                 </p>
-                                <a href="#" class="btn btn-primary"><i class="bi bi-chevron-right"></i> Leia mais</a>
+                                <a href="#" class="btn btn-danger"><i class="bi bi-chevron-right"></i> Leia mais</a>
                             </div>
                         </div>
                     </div>
@@ -168,13 +168,13 @@
 
         <!-- seção sobre -->
         <section class="p-5" id="sobre">
-            <div class="container py-5">
+            <div class="container py-4">
                 <div class="row justify-content-between align-items-center">
                     <div class="col-md">
                         <a href="#"><img src="./img/webinar-img01.png" class="img-fluid" alt=""></a>
                     </div>
                     <div class="col-md p-5">
-                        <h2>Aprenda o básico</h2>
+                        <h2>Sobre nós</h2>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
                             Doloremque nemo ipsam mollitia, non reprehenderit tempora soluta ab
                             voluptas corporis iste laborum quos, quisquam eum accusamus repudiandae,
@@ -183,7 +183,6 @@
                             Autem pariatur molestias iusto deleniti! Cupiditate placeat atque optio 
                             quasi, eos vel, repudiandae ullam perferendis ab facilis sequi, quisquam 
                             soluta.</p>
-                        <a href="#" class="btn btn-primary mt-3"> <i class="bi bi-chevron-right"></i>Leia mais</a>
                     </div>
                 </div>
             </div>
@@ -274,7 +273,7 @@
                     <div class="col-md-6 col-lg-3">
                         <div class="card bg-light">
                             <div class="card-body text-center p-5">
-                                <img src="img/webinar-img01.png" class="rounded-circle mb-3" alt="">
+                                <img src="./img/img-pessoa01.jpg" width="100%" class="rounded-circle mb-3" alt="">
                                 <h3 class="card-title mb-3">John Dow</h3>
                                 <p class="card-text">
                                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
@@ -292,7 +291,7 @@
                     <div class="col-md-6 col-lg-3">
                         <div class="card bg-light">
                             <div class="card-body text-center p-5">
-                                <img src="img/webinar-img01.png" class="rounded-circle mb-3" alt="">
+                                <img src="./img/img-pessoa02.jpg" width="100%" class="rounded-circle mb-3" alt="">
                                 <h3 class="card-title mb-3">John Dow</h3>
                                 <p class="card-text">
                                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
@@ -310,7 +309,7 @@
                     <div class="col-md-6 col-lg-3">
                         <div class="card bg-light">
                             <div class="card-body text-center p-5">
-                                <img src="img/webinar-img01.png" class="rounded-circle mb-3" alt="">
+                                <img src="./img/img-pessoa03.jpg" width="100%" class="rounded-circle mb-3" alt="">
                                 <h3 class="card-title mb-3">John Dow</h3>
                                 <p class="card-text">
                                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
@@ -328,7 +327,7 @@
                     <div class="col-md-6 col-lg-3">
                         <div class="card bg-light">
                             <div class="card-body text-center p-5">
-                                <img src="img/webinar-img01.png" class="rounded-circle mb-3" alt="">
+                                <img src="./img/img-pessoa04.jpeg" width="100%"class="rounded-circle mb-3" alt="">
                                 <h3 class="card-title mb-3">John Dow</h3>
                                 <p class="card-text">
                                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
@@ -434,7 +433,6 @@
                 </div>
             </div>
             <button class="btn btn-primary" data-bs-target="#exampleModalToggle" data-bs-toggle="modal">Open first modal</button>
-
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" 
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" 
       crossorigin="anonymous"></script>
