--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <div class="container py-4">
                 <div class="row justify-content-between align-items-center">
                     <div class="col-md">
-                        <a href="#"><img src="./img/webinar-img01.png" class="img-fluid" alt=""></a>
+                        <a href="#"><img src="./img/sobre.png" class="img-fluid" alt=""></a>
                     </div>
                     <div class="col-md p-5">
                         <h2>Sobre nós</h2>
@@ -189,10 +189,10 @@
         </section>
 
         <!-- Seção de aprendizado -->
-        <section class="p-5 bg-dark"  id="sobre">
+        <section class="secao-aprendizado p-5  id="sobre">
             <div class="container py-5">
                 <div class="row justify-content-between align-items-center">
-                    <div class="col-md text-light p-5">
+                    <div class="col-md text-dark p-5">
                         <h2>Aprenda assistindo</h2>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
                             Doloremque nemo ipsam mollitia, non reprehenderit tempora soluta ab
@@ -202,7 +202,7 @@
                             Autem pariatur molestias iusto deleniti! Cupiditate placeat atque optio 
                             quasi, eos vel, repudiandae ullam perferendis ab facilis sequi, quisquam 
                             soluta.</p>
-                        <a href="#" class="btn btn-light mt-3">Leia mais</a>
+                        <a href="#" class="btn btn-danger mt-3">Leia mais</a>
                     </div>
                     <div class="col-md">
                         <a href="#">
@@ -213,14 +213,14 @@
             </div>
         </section>
         <!-- Seção F&Q -->
-        <section class="p-5" id="perguntas">
+        <section class="p-2" id="perguntas">
             <div class="container py-5">
-                <h2 class="text-center mb-4">Perguntas</h2>
+                <h2 class="text-center mb-4">Perguntas frequentes</h2>
                 <div class="accordion" id="accordionExample">
                     <div class="accordion-item">
                       <h2 class="accordion-header">
                         <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                          Accordion Item #1
+                            Quais são os requisitos para participar dos cursos de conversação em inglês?
                         </button>
                       </h2>
                       <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
@@ -232,7 +232,7 @@
                     <div class="accordion-item">
                       <h2 class="accordion-header">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                          Accordion Item #2
+                            Como faço para me inscrever nos cursos?
                         </button>
                       </h2>
                       <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
@@ -244,7 +244,7 @@
                     <div class="accordion-item">
                       <h2 class="accordion-header">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                          Accordion Item #3
+                            Quais são os métodos de pagamento aceitos?
                         </button>
                       </h2>
                       <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
@@ -253,16 +253,52 @@
                         </div>
                       </div>
                     </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            Os cursos são ministrados ao vivo ou gravados?
+                          </button>
+                        </h2>
+                        <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                          <div class="accordion-body">
+                            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                          </div>
+                        </div>
+                      </div>
+                      <div class="accordion-item">
+                        <h2 class="accordion-header">
+                          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            Qual é o formato das aulas de conversação?
+                          </button>
+                        </h2>
+                        <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                          <div class="accordion-body">
+                            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                          </div>
+                        </div>
+                      </div>
+                      <div class="accordion-item">
+                        <h2 class="accordion-header">
+                          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            Posso receber um certificado após concluir o curso?
+                          </button>
+                        </h2>
+                        <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                          <div class="accordion-body">
+                            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                          </div>
+                        </div>
+                      </div>
                   </div>
             </div>
         </section>
 
         <!-- Instrutores -->
-        <section class="p-5 bg-primary" id="instrutores">
+        <section class="p-3" id="instrutores">
             <div class="container py-5">
-                <h2 class="text-center text-white">Nossos instrutores</h2>
+                <h2 class="text-center text-dark">Nossos instrutores</h2>
 
-                <p class="lead text-center text-white mb-5">
+                <p class="lead text-center text-secondary mb-5">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     Quod ut voluptas nostrum autem repudiandae, sunt neque 
                     pariatur totam dolorum, laborum corporis expedita deleniti magnam.
@@ -292,7 +328,7 @@
                         <div class="card bg-light">
                             <div class="card-body text-center p-5">
                                 <img src="./img/img-pessoa02.jpg" width="100%" class="rounded-circle mb-3" alt="">
-                                <h3 class="card-title mb-3">John Dow</h3>
+                                <h3 class="card-title mb-3">Marie johson</h3>
                                 <p class="card-text">
                                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                                     Possimus nobis atque facilis porro, praesentium explicabo laborum 
@@ -310,7 +346,7 @@
                         <div class="card bg-light">
                             <div class="card-body text-center p-5">
                                 <img src="./img/img-pessoa03.jpg" width="100%" class="rounded-circle mb-3" alt="">
-                                <h3 class="card-title mb-3">John Dow</h3>
+                                <h3 class="card-title mb-3">Charles Smith</h3>
                                 <p class="card-text">
                                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                                     Possimus nobis atque facilis porro, praesentium explicabo laborum 
@@ -327,8 +363,8 @@
                     <div class="col-md-6 col-lg-3">
                         <div class="card bg-light">
                             <div class="card-body text-center p-5">
-                                <img src="./img/img-pessoa04.jpeg" width="100%"class="rounded-circle mb-3" alt="">
-                                <h3 class="card-title mb-3">John Dow</h3>
+                                <img src="./img/img-pessoa04.jpg" width="100%"class="rounded-circle mb-3" alt="">
+                                <h3 class="card-title mb-3">Hanna Lewis</h3>
                                 <p class="card-text">
                                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                                     Possimus nobis atque facilis porro, praesentium explicabo laborum 
@@ -400,7 +436,7 @@
     </footer>
 
     <!-- Modais -->
-            <div class="modal fade" id="exampleModalToggle" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
+            <!-- <div class="modal fade" id="exampleModalToggle" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
                 <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -428,10 +464,10 @@
                     </div>
                     <div class="modal-footer">
                     <button class="btn btn-primary" data-bs-target="#exampleModalToggle" data-bs-toggle="modal">Back to first</button>
-                    </div>
+                    </div> -->
+                <!-- </div>
                 </div>
-                </div>
-            </div>
+            </div> -->
             <button class="btn btn-primary" data-bs-target="#exampleModalToggle" data-bs-toggle="modal">Open first modal</button>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" 
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" 
